# socket

./: .gitignore  CMakeLists.txt  NetworkPacket.h  main.cpp  receiver.cpp  receiver.h  sender.cpp  sender.h
core/: CMakeLists.txt  basic.cpp  basic.h  bridge.cpp  bridge.h  debug.cpp  debug.h  fakedaemon.cpp  fakedaemon.h  networkpacket.cpp  networkpacket.h  transferstuff.cpp  transferstuff.h  winbasic.cpp  winbasic.h
