if (WIN32)
add_library(corefun winbasic.cpp winbasic.h bridge.cpp bridge.h CMakeLists.txt debug.cpp debug.h fakedaemon.cpp fakedaemon.h networkpacket.cpp networkpacket.h transferstuff.cpp transferstuff.h)
elseif(UNIX)
add_library(corefun basic.cpp basic.h bridge.cpp bridge.h CMakeLists.txt debug.cpp debug.h fakedaemon.cpp fakedaemon.h networkpacket.cpp networkpacket.h transferstuff.cpp transferstuff.h)
endif ()